# bb_rtmp

./: .gitignore  LICENSE  README.md  STREAMING_STANDARDS.md  build_librtmp.sh  extract_aar.sh  pubspec.yaml
android/: CMakeLists.txt  LIBRTMP_INTEGRATION.md  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: rtmp_jni.cpp  rtmp_wrapper.cpp
android/src/main/java/com/bb/rtmp/: NativeBridge.java  RtmpNative.java
android/src/main/kotlin/com/bb/rtmp/: AudioEncoder.kt  BbRtmpPlugin.kt  BbRtmpPreviewFactory.kt  BitrateController.kt  CameraController.kt  GlRenderer.kt  RtmpService.kt  RtmpStreamer.kt  VideoEncoder.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/bb_rtmp_example/: YoloNative.java
example/android/app/src/main/kotlin/com/example/bb_rtmp_example/: MainActivity.kt
example/assets/model/: yolo11n.ncnn.param
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: OPTIMIZATION_SUMMARY.md  bb_rtmp.podspec
ios/Classes/: AudioEncoder.swift  BbRtmpPlugin.h  BbRtmpPlugin.swift  BitrateController.swift  NetworkDiagnostics.swift  PreviewTexture.swift  RtmpStreamer.swift  RtmpWrapper.h  RtmpWrapper.mm  VideoEncoder.swift  rtmp_wrapper.cpp  rtmp_wrapper.h
ios/Classes/librtmp/: rtmp.c
lib/: bb_rtmp.dart
